--- a/assets/index.css/style.css
+++ b/assets/index.css/style.css
@@ -1,9 +1,31 @@
 body{
 
 background-color: white;
+display: flex;
+flex-direction: column;
+align-items: center;
+
 }
 .button{
     background-color: #ec4067;
     font-family: 'Nunito', Times, serif;
 
 }
+
+.container {
+    color: black;
+    padding: 20px;
+    background-color: white;
+    
+    
+
+}
+.visuals {
+    font-style: bold;
+
+}
+img {
+
+    float: right;
+}
+    
