--- a/assets/index.css/style.css
+++ b/assets/index.css/style.css
@@ -79,9 +79,21 @@ text-align: right;
 
 }
 
-#rose{
+#Content3{
 
+  margin: 0 0 0 10px;
+}
+.column {
   float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 img {
   max-height: 200px;
