--- a/assets/index.css/style.css
+++ b/assets/index.css/style.css
@@ -1,33 +1,55 @@
-body{
+/*body*/body{
 
 background-color: white;
-font-family: 'Nunito', serif;
+font-family: 'Nunito', san-serif;
 }
+
+
+
 header{
-  margin: 10px;
-  padding: 20px 10%;
+  margin: 0px;
   box-sizing: 0;
+  padding: 0%;
   background-color: white;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+}
 
+.navbar{
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 35px;
+  padding-bottom: 10px;
+  margin: auto;
 
 }
+.navbar .nav-links{
+   color: black;
+   text-decoration: none;
+  
+}
+.navbar ul{
+  display: flex;
+  
+
+}
+
+.navbar .nav-items{
+
+margin: auto;
+font-size: 16px;
+list-style: none;
+padding-left: 20px;
+padding-right: 20px;
+}
+
 .logo{
   cursor: pointer;
   margin-right: auto;
+  font-size: 26px;
 }
-.nav-links{
-  list-style: none;
-}
-.nav-links li{
-  display: inline-block;
-  padding: 0px 20px;
-}
-.nav-links a{
-  transition: 0;
-}
+
+
 .button{
     background-color: #ec4067;
     font-family: 'Nunito', Times, serif;
@@ -43,6 +65,15 @@ header{
   align-items: center;
 
 }
+/*
+.container .info{
+
+  display: flex;
+  
+
+}
+/*
+
 .content1{
   margin: 0 0 0 10px;
   
@@ -51,7 +82,12 @@ header{
   margin: 0 0 0 10px;
   
 }
+.Content3{
 
+  margin: 0 0 0 10px;
+}
+
+*/
 
 #one {
   float: right;
@@ -73,25 +109,12 @@ header{
 
 }
 
-.Content3{
 
-  margin: 0 0 0 10px;
-}
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
+
+.images{
+  max-height: 100px;
 }
 
-/* Clear floats after image containers */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-img {
-  max-height: 200px;
-}
 footer{
     background-color: grey;
     text-align: center;
@@ -101,3 +124,4 @@ footer{
 
 
     
+
