--- a/assets/index.css/style.css
+++ b/assets/index.css/style.css
@@ -60,6 +60,9 @@ padding-right: 20px;
 .button{
     background-color: #ec4067;
     font-family: 'Nunito', Times, serif;
+    border-radius: 5px;
+    border: none;
+    text-decoration: white;
 
 }
  
@@ -87,7 +90,10 @@ width: 1200px;
 .images{
 
   display: flex;
-  max-width: 300px;
+  /* max-width: 300px; */
+}
+h1{
+  color: #ec4067;
 }
 .content1{
   margin: 50px;
@@ -98,7 +104,7 @@ width: 1200px;
 .content2{
   margin: 50px;
   display: inline-block;
-  padding-left: 50;
+  padding-left: 50px;
   
 }
 
@@ -106,7 +112,7 @@ width: 1200px;
 
   margin: 50px;
   display: inline-block;
-  padding-right: 50;
+  padding-right: 50px;
 }
 
 .par1{
@@ -116,6 +122,7 @@ width: 1200px;
 
 .par2{
   float: right;
+  
 
 }
 
@@ -130,27 +137,27 @@ width: 1200px;
 
 #one {
   float: right;
-  justify-content: end;
+  /* justify-content: end; */
   height: 350;
   width: 300;
 
 }
 #two {
   float: left;
-  justify-content: end;
-  height: 350;
+  /* justify-content: end; */
+  height: 300;
   width: 300;
 }
 #three{
   float: right;
-  justify-content: end;
+  /* justify-content: end; */
   height: 350;
   width: 300;
 
 }
 #four{
   float: left;
-  justify-content: end;
+  /* justify-content: end; */
   height: 350;
   width: 300;
 
