--- a/assets/index.css/style.css
+++ b/assets/index.css/style.css
@@ -63,6 +63,7 @@ padding-right: 20px;
     border-radius: 5px;
     border: none;
     text-decoration: white;
+    min-height: 35px;
 
 }
  
@@ -94,11 +95,13 @@ width: 1200px;
 }
 h1{
   color: #ec4067;
+  padding-top: 50px;
 }
 .content1{
   margin: 50px;
   display: inline-block;
   width: 700px;
+  
   
 }
 .content2{
@@ -117,6 +120,7 @@ h1{
 
 .par1{
   float: left;
+  padding-top: 10px;
 
 }
 
@@ -137,20 +141,20 @@ h1{
 
 #one {
   float: right;
-  /* justify-content: end; */
+  
   height: 350;
   width: 300;
 
 }
 #two {
   float: left;
-  /* justify-content: end; */
+  
   height: 300;
   width: 300;
 }
 #three{
   float: right;
-  /* justify-content: end; */
+  padding-left: 10px;
   height: 350;
   width: 300;
 
